[package]
version = "0.1.3"
name = "viral32111-stomp"
description = "STOMP client crate for my Rust projects. "
repository = "https://github.com/viral32111/stomp"
documentation = "https://viral32111.github.io/stomp/viral32111_stomp"
authors = [ "viral32111 <contact@viral32111.com>" ]
readme = "README.md"
license = "AGPL-3.0-only"
keywords = [ "stomp-client", "networking" ]
categories = [ "command-line-utilities", "network-programming", "data-structures" ]
include = [ "src", "README.md", "LICENSE.txt" ]
edition = "2021"
rust-version = "1.77"

[dependencies]
flate2 = "1.0.30"
